# agent-optsmith

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README_ANCHOR.md  README_CN.md  pyproject.toml
.agent-loop-data/metrics/: task-runs.csv
.agents/optsmith-data/metrics/: task-runs.csv
.agents/skills/aoso-repo-maintainer/: SKILL.md
.agents/skills/optsmith-cli-maintainer/: SKILL.md
.agents/skills/optsmith-repo-maintainer/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-or-regression.md  skill-optimization.md
.github/workflows/: ci.yml
Formula/: aoso-skill.rb  optsmith.rb
aoso_skill_cli/: __init__.py  cli.py
docs/: closed-loop-playbook.md  measurement-framework.md  optsmith-playbook.md  project-integration-guide-cn.md
metrics/: task-runs.csv
optsmith_cli/: __init__.py  cli.py
reports/skill-optimization/: 2026-03-06-aoso-repo-maintainer-optimization-plan.md  2026-03-06-does-not-exist-optimization-plan.md  2026-03-09-aoso-repo-maintainer-optimization-plan.md
scripts/: create_skill.sh  dashboard_server.py  log_task_run.sh  metrics_report.sh  optimize_skill.sh  weekly_review.sh
skills/agent-optsmith/references/: command-recipes.md
skills/agent-optsmith/scripts/: metrics_report.sh
skills/agent-self-optimizing-loop/: SKILL.md
skills/agent-self-optimizing-loop/references/: command-recipes.md
skills/agent-self-optimizing-loop/scripts/: auto_run_loop.sh  dashboard_server.py  (+4 more)
skills/aoso-repo-maintainer/: SKILL.md
templates/reports/: weekly-self-optimization-report.md
templates/skill/: SKILL.md.template
(+28 files in other folders)
