[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optsmith"
version = "0.2.1"
description = "CLI for Agent Optsmith: project-local skill install, telemetry, and optimization workflow."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Optsmith Maintainers" }
]
keywords = ["codex", "skill", "agent-optimization", "dashboard", "optsmith"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
]

[project.scripts]
optsmith = "optsmith_cli.cli:main"

[tool.setuptools]
packages = ["optsmith_cli"]

[tool.setuptools.package-data]
optsmith_cli = ["resources/skills/agent-optsmith/**"]
